les requetes fonctionnent

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,19 +1,14 @@
 FROM python:3.11-slim
 
-RUN apt-get update
-<<<<<<< HEAD
-# On retire les fichiers temporaires :
-=======
-#  On retire les fichiers temporaires :
->>>>>>> f985981 (appel graphql)
-RUN rm -rf /var/lib/apt/lists/* 
+RUN apt-get update && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY main.py .
+# COPIE TOUT le code (main.py + anilist/)
+COPY . .
 
 EXPOSE 8000
 
