--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,10 @@ services:
       - "8001:8000"
     environment:
       - PYTHONUNBUFFERED=1
+      - DATABASE_URL=postgresql+asyncpg://username:password@db:5432/db_anilist
+    depends_on:
+      db:
+        condition: service_healthy
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
@@ -18,7 +22,22 @@ services:
       start_period: 40s
     networks:
       - recoMangaTion-network  
-
+  # Service Database (PostgreSQL)
+  db:
+    image: postgres:16
+    environment:
+      POSTGRES_USER: username
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: db_anilist
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U api -d recomangation"]
+      interval: 5s
+      timeout: 3s
+      retries: 20
   # Service Frontend Web
   # maybe later, , ,
 
@@ -66,3 +85,4 @@ networks:
 volumes:
   prom_data:
   grafana_data:
+  pgdata:
