BDD postgres fonctionne enfin!!

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,8 @@ services:
       interval: 5s
       timeout: 3s
       retries: 20
+    networks:
+    - recoMangaTion-network 
   # Service Frontend Web
   # maybe later, , ,
 
