--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -31,3 +31,8 @@ scrape_configs:
     static_configs:
       - targets:
         - api:8000
+
+# TODO : ajouter metrics pour la BDD (potentielement)
+# - job_name: 'postgresql'
+#   static_configs:
+#     - targets: ['postgres-exporter:9187']
