--- a/.github/workflows/automated_tests.yml
+++ b/.github/workflows/automated_tests.yml
@@ -26,4 +26,4 @@ jobs:
         env:
           PYTHONPATH: api
         run: |
-          pytest api/testsGitHubAction/
+          pytest api/testsGitHubAction/ -vv
