énième test mais on trust soldat

--- a/.github/workflows/automated_tests.yml
+++ b/.github/workflows/automated_tests.yml
@@ -15,15 +15,26 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.10"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r api/requirements.txt
+          pip install pytest pytest-asyncio httpx
 
       - name: Run les tests du dossier testsGitHubAction
         env:
-          PYTHONPATH: api
+          PYTHONPATH: ${{ github.workspace }}/api
         run: |
-          pytest api/testsGitHubAction/ -vv
+          cd api
+          pytest testsGitHubAction/ -v --tb=short
+
+      - name: Report des tests failures
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: pytest-results
+          path: |
+            api/pytest-report.xml
