--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -31,6 +31,9 @@ scrape_configs:
     static_configs:
       - targets:
         - api:8000
+  - job_name: 'node' # Pour métriques de l'host
+    static_configs:
+      - targets: ['node-exporter:9100']
 
 # TODO : ajouter metrics pour la BDD (potentielement)
 # - job_name: 'postgresql'
