--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -15,4 +15,7 @@ COPY alembic ./alembic
 
 EXPOSE 8000
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--ssl-keyfile", "key.pem", "--ssl-certfile", "cert.pem"]
+#http
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+#https
+#CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--ssl-keyfile", "key.pem", "--ssl-certfile", "cert.pem"]
