--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     ports:
       - "5174:5173"
     environment:
-      - VITE_API_BASE_URL=http://localhost:8001/api
+      - VITE_API_BASE_URL=http://localhost:8001
     depends_on:
       - api
     networks:
